# zak-autho-gui

./: .cproject  .gitignore  .project  AUTHORS  Makefile.am  autogen.sh  configure.ac  libautozgui.pc.in  libzakauthogui.pc.in
data/: Makefile.am
data/autoz-gui/gui/: Makefile.am  autoz-gui.ui
data/zak-autho-gui/gui/: Makefile.am  autoz-gui.ui
src/: Makefile.am  authorization.c  authorization.h  authorizations.c  authorizations.h  commons.h  main.c  openauditds.c  openauditds.h  resource.c  resource.h  resources.c  resources.h  role.c  role.h  roles.c  roles.h
tests/: Makefile.am  db.db
